# Abstract_Algebra_Manual

./: .rustfmt.toml  Cargo.toml  README.md
examples/: finite_group.rs  int_group.rs
src/: algbra_structs.rs  algebra_structs.rs  axioms.rs  field.rs  group.rs  lib.rs  main.rs  modules.rs  utils.rs
src/axioms/: parse.rs
src/axioms/checker/: field.rs  group.rs
src/modules/: algebra_checker.rs  algebra_structs.rs  algebra_trait.rs  parse.rs
src/modules/checker/: field.rs  group.rs
src/utils/: axiom.rs  binary_operation.rs  field_axiom.rs  group_axiom.rs  parse.rs  residue_class.rs  set.rs
